--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <ion-menu [content]="content">
   <ion-header>
     <ion-toolbar>
-      <ion-title>Elite Schedule</ion-title>
+      <ion-title>Elite Schedule jioasdjiosajdo</ion-title>
     </ion-toolbar>
   </ion-header>
 
